Added React Router and Capitalized first letter of each Pokemon name.
Need to figure out why Cards aren't clickable.

--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,18 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 /* ################# CardTable ################ */
-
 
 /* ----------------- Number of Entries -------- */
 
@@ -65,15 +64,13 @@ li:not(.unclickable):active {
 div.box {
   min-height: 450px;
   max-height: 450px;
-  max-height: 40px;
   margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-
 /* --------------- Card Table Component --------------- */
-.container{
+.container {
   margin: auto;
   /* justify-items: center; */
   text-align: center;
@@ -90,7 +87,6 @@ div.box {
   text-align: center;
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 .pokemon {
