--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,123 +1,117 @@
-.grid{
-    margin: auto;
-    /* justify-items: center; */
-    text-align: center;
-    /* min-height: 100%; */
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: row; */
-    width: 100%;
-    
+.grid {
+  margin: auto;
+  /* justify-items: center; */
+  /* text-align: center; */
+  /* min-height: 100%; */
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
+  width: 100%;
 }
 
 a.item {
-    margin: auto;
-    padding: 0.2%;
+  margin: auto;
+  padding: 0.2%;
 }
 
 .pokemon {
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-
 
 /* Num Entries Per Page */
 .numEntries {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .numEntries ul {
-    float: right;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    margin-right: 10px;
+  float: right;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-right: 10px;
 }
 
 li {
-    list-style: none;
-    text-align: right;
-    display: inline;
-    margin: 5px;
+  list-style: none;
+  text-align: right;
+  display: inline;
+  margin: 5px;
 }
 
 li:not(.unclickable):hover {
-    color: blue;
-    cursor: pointer;
+  color: blue;
+  cursor: pointer;
 }
 
 /* Bootstrap css for this */
 li:not(.unclickable):active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* Pagination */
 .pagination {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .pagination * {
-    margin: 10px;
+  margin: 10px;
 }
 
 .pagination button:hover {
-    background-color: lightblue;
+  background-color: lightblue;
 }
-
 
 /* ################# Card Component ################# */
 
-
-
 /* ################# Poke Info Page ################# */
 .poke.title {
-    display: block;
-    font-size: 40px;
-    margin: 2rem;
-    vertical-align: middle;
-    text-align: center;
+  display: block;
+  font-size: 40px;
+  margin: 2rem;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .column.title {
-    background-color: lightgrey;
-    border-radius: 5px;
+  background-color: lightgrey;
+  border-radius: 5px;
 }
 
 /* Type */
 
 div.pokemon-type ul {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 div.type-area {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 }
 
 div.type-area li {
-    display: inline-block;
-    list-style: none;
-    pointer-events: none;
+  display: inline-block;
+  list-style: none;
+  pointer-events: none;
 }
-
 
 /* Stats */
 .stat-name {
-    text-align: left;
+  text-align: left;
 }
 
 .stat-detail {
-    text-align: right;
+  text-align: right;
 }
 
 .stat-items {
-    width: 100%;
+  width: 100%;
 }
 
 .stat-title {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
