--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,5 +1,5 @@
 .grid {
-  margin: auto;
+  margin: 0 !important;
   /* justify-items: center; */
   /* text-align: center; */
   /* min-height: 100%; */
@@ -65,6 +65,9 @@ li:not(.unclickable):active {
 }
 
 /* ################# Card Component ################# */
+
+div.card-body {
+}
 
 /* ################# Poke Info Page ################# */
 .poke.title {
