--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -126,3 +126,20 @@ div.type-area li {
   font-weight: bold;
   text-align: center;
 }
+
+/* ###################### Search Results ######################## */
+div.result {
+  display: block;
+  position: absolute;
+  z-index: 99 !important;
+  width: 100%;
+}
+
+div.search-card {
+  display: block;
+  height: 50px;
+  margin-top: 2px;
+  padding: 5px;
+  background-color: white;
+  border: 1px solid black;
+}
